@@ -1,4 +1,4 @@
 module Redlander
   # Redlander version number
-  VERSION = "0.5.1"
+  VERSION = "0.5.2"
 end
