@@ -1,3 +1,8 @@
+redlander (0.5.2)
+
+  * UTF-8 output for Node#value
+  * value of the blank node is its identifier without "_:" prefix
+
 redlander (0.5.1)
 
   * fixed a memory leak in Model#query
